test/samples/error/error_sysmbol_not_define_null_pointer.w
func f(a : int) {}

var x = 1
x = x1
var v = [1,2,3]
v[2] = x2
var y = [1,x3,3]

if (z >0 ){
	print ("hi")
}

while (q >0){
	q = q-1
}

f(e)





